# py-pod

./: .gitignore  CHANGES  INSTALL  PKG-INFO  README  README.md  epydoc.cfg  pyproject.toml  setup.cfg  setup.py
branches/signet-trimmed-down/: CHANGES  PKG-INFO  setup.py
doc/: api-objects.txt  class-tree.html  pod.DecompositionBasic-class.html  pod.L2NormMinDecomposition-class.html  pod.linalg-pysrc.html  pod.linalg.Vector-class.html  pod.linalg.VectorMatrix-class.html  pod.util-module.html  pod.util-pysrc.html  pod.util.NullHandler-class.html  pod.vecspace-module.html  pod.vecspace-pysrc.html  pod.vecspace.HyperPlane-class.html  pod.vecspace.StraightLine-class.html  pod.vecspace.VectorSpace3D-class.html  redirect.html  signalrepl-module.html  toc-everything.html  toc-pod-module.html  toc.html
docs/api/: all-documents.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  pod.BaseDecomposition.html  pod.IterativeDecomposition.html  pod.linalg.Matrix.html  pod.linalg.Vector.html  pod.linalg.html  pod.projection.Projection.html  pod.projection.StraightLine.html  pod.projection.VectorSpace.html  pod.projection.html  pod.util.NullHandler.html  pod.util.html  pod.vecspace.Projection.html  pod.vecspace.StraightLine.html  pod.vecspace.VectorSpace.html  pod.vecspace.html  searchindex.json  undoccedSummary.html
pca/: __init__.py
pod/: __init__.py  linalg.py  mathtools.py  projection.py  util.py  vecspace.py
tests/: test_linalg.py  test_pod.py  test_util.py  test_vecspace.py
trunk/: PKG-INFO  setup.py
(+27 files in other folders)
