[tool.poetry]
name = "py-pod"
version = "1.0.6"
description = "Implementation of a Proper Orthogonal Decomposition (POD) method"
authors = ["Christophe <christophe.alexandre@pm.me>"]
readme = "README.md"
packages = [{include = "pod"}]

[tool.poetry.dependencies]
python = "^3.10"
pydoctor = "^23.4.1"
nose2 = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
