[tool.poetry]
name = "py-pod"
version = "2.0"
description = "Implementation of a Proper Orthogonal Decomposition (POD) method"
authors = ["Christophe <christophe.alexandre@pm.me>"]
readme = "README.md"
packages = [{include = "pod"}]

[tool.poetry.dependencies]
python = "^3.10"
pydoctor = "^23.4.1"
nose2 = "^0.13.0"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
